tests/tests/snapshots/golden__ir__ontology-growth.snap
---
source: tests/tests/golden.rs
expression: json
---
{
  "name": "MediaOps",
  "nodes": [
    {
      "id": 0,
      "kind": "Database",
      "name": "main",
      "engine": "Postgres"
    },
    {
      "id": 1,
      "kind": "Database",
      "name": "analytics",
      "engine": "Postgres"
    },
    {
      "id": 2,
      "kind": "Cache",
      "name": "hot",
      "engine": "Redis"
    },
    {
      "id": 3,
      "kind": "Queue",
      "name": "bus",
      "engine": "Nats"
    },
    {
      "id": 4,
      "kind": "ObjectStore",
      "name": "media",
      "provider": "S3",
      "bucket": "videos"
    },
    {
      "id": 5,
      "kind": "Email",
      "name": "transactional",
      "provider": "Ses"
    },
    {
      "id": 6,
      "kind": "Search",
      "name": "catalog",
      "provider": "OpenSearch"
    },
    {
      "id": 7,
      "kind": "ExternalHttp",
      "name": "billing",
      "base_url": "https://billing.internal"
    },
    {
      "id": 8,
      "kind": "Stream",
      "name": "Uploaded",
      "subject": "media_ops.uploaded",
      "record": 0
    },
    {
      "id": 9,
      "kind": "Stream",
      "name": "Indexed",
      "subject": "media_ops.indexed",
      "record": 0
    },
    {
      "id": 10,
      "kind": "Api",
      "name": "Upload",
      "request": 0,
      "config": {
        "method": "Put",
        "path": "/videos",
        "scope": null
      }
    },
    {
      "id": 11,
      "kind": "Worker",
      "name": "Indexer",
      "config": {
        "concurrency": 1,
        "max_retries": 0
      }
    },
    {
      "id": 12,
      "kind": "Worker",
      "name": "Notifier",
      "config": {
        "concurrency": 1,
        "max_retries": 0
      }
    },
    {
      "id": 13,
      "kind": "Service",
      "name": "StoreVideo"
    },
    {
      "id": 14,
      "kind": "Service",
      "name": "RecordAnalytics"
    },
    {
      "id": 15,
      "kind": "Service",
      "name": "IndexVideo"
    },
    {
      "id": 16,
      "kind": "Service",
      "name": "NotifyUser"
    }
  ],
  "edges": [
    {
      "id": 0,
      "from": 8,
      "to": 3,
      "kind": "DependsOn"
    },
    {
      "id": 1,
      "from": 9,
      "to": 3,
      "kind": "DependsOn"
    },
    {
      "id": 2,
      "from": 8,
      "to": 11,
      "kind": "AsyncMessage"
    },
    {
      "id": 3,
      "from": 9,
      "to": 12,
      "kind": "AsyncMessage"
    },
    {
      "id": 4,
      "from": 13,
      "to": 0,
      "kind": "DataFlow"
    },
    {
      "id": 5,
      "from": 13,
      "to": 2,
      "kind": "DataFlow"
    },
    {
      "id": 6,
      "from": 13,
      "to": 4,
      "kind": "DataFlow"
    },
    {
      "id": 7,
      "from": 14,
      "to": 1,
      "kind": "DataFlow"
    },
    {
      "id": 8,
      "from": 10,
      "to": 13,
      "kind": "RequestFlow"
    },
    {
      "id": 9,
      "from": 13,
      "to": 14,
      "kind": "RequestFlow"
    },
    {
      "id": 10,
      "from": 14,
      "to": 8,
      "kind": "AsyncMessage"
    },
    {
      "id": 11,
      "from": 15,
      "to": 6,
      "kind": "DataFlow"
    },
    {
      "id": 12,
      "from": 15,
      "to": 7,
      "kind": "DataFlow"
    },
    {
      "id": 13,
      "from": 11,
      "to": 15,
      "kind": "RequestFlow"
    },
    {
      "id": 14,
      "from": 15,
      "to": 9,
      "kind": "AsyncMessage"
    },
    {
      "id": 15,
      "from": 16,
      "to": 5,
      "kind": "DataFlow"
    },
    {
      "id": 16,
      "from": 12,
      "to": 16,
      "kind": "RequestFlow"
    }
  ],
  "records": [
    {
      "name": "Video",
      "fields": [
        {
          "name": "id",
          "ty": {
            "type": "Uuid"
          }
        },
        {
          "name": "title",
          "ty": {
            "type": "Str"
          }
        },
        {
          "name": "status",
          "ty": {
            "type": "Enum",
            "variants": [
              "Ready",
              "Failed"
            ]
          }
        }
      ]
    }
  ],
  "pipelines": [
    {
      "name": "Upload",
      "owner": 10,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 13
        },
        {
          "step": "Handler",
          "node": 14
        },
        {
          "step": "Publish",
          "stream": 8
        },
        {
          "step": "Return"
        }
      ]
    },
    {
      "name": "Indexer",
      "owner": 11,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 15
        },
        {
          "step": "Publish",
          "stream": 9
        }
      ]
    },
    {
      "name": "Notifier",
      "owner": 12,
      "payload": 0,
      "steps": [
        {
          "step": "Handler",
          "node": 16
        }
      ]
    }
  ],
  "resources": [],
  "event_streams": []
}
